--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,6 +23,10 @@
   </div>
 
   <div class="form-group">
+   <%= f.input :photo, as: :file %>
+  </div>
+
+  <div class="form-group">
     <%= f.button :submit %>
   </div>
 <% end %>
