--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,9 +5,79 @@
 
 // External libraries
 @import "bootstrap/scss/bootstrap";
+@import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
 // Your CSS partials
-@import "components/index";
 @import "pages/index";
+
+@import "bootstrap-sprockets";
+
+/*Imports*/
+
+@import "components/index";
+@import "components/header";
+@import "components/navbar";
+@import "components/cards";
+@import "components/footer";
+@import "components/article";
+
+/*Fonts
+font-family: 'Cinzel', serif;
+font-family: 'Lora', serif;
+font-family: 'Karma', serif;
+*/
+
+/*Main Style*/
+body, html, .container {
+  margin: 0 auto;
+  padding: 0;
+  width: 85%;
+  height: 100%;
+  background-color: #F8F8F8;
+  align-items: center;
+  justify-content: center;
+}
+
+/*Media Queries*/
+// Smallest device
+@media (min-width: 100px) and (max-width: 575px) {
+  .cards {
+    grid-template-columns: 1fr;
+  }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  .cards {
+    grid-template-columns: 1fr;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .cards {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+
+
+
+
+
