--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -19,11 +19,19 @@
   </div>
 
   <div class="form-group">
-    <%= f.input :body, class: "form-control" %>
+    <%= f.input :category_id, class: "form-control" %>
+  </div>
+
+<!--   <div class="form-group">
+    <%= f.input :category, collection: [["Beauty & Style"],["Food & Drinks"],["Health & Fitness"],["Home Decor"],["Life & Inspo"]] %>
+  </div> -->
+
+  <div class="form-group">
+    <%= f.input :body %>
   </div>
 
   <div class="form-group">
-   <%= f.input :photo, as: :file %>
+    <%= f.input :photo, as: :file %>
   </div>
 
   <div class="form-group">
