--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,12 @@
-<div class="col-sm-11 col-xs-12 blog-content">
-  <h2 class="text-center"><%= @post.title %></h2>
-  <h5 class="text-center"><%= @post.created_at.strftime('%b %d, %Y') %></h5>
-  <div><%= raw @post.body %></div>
+<div class="article">
+  <div class="article-header">
+    <%= cl_image_tag @post.photo.key %>
+    <%#= image_tag(@post.media) %>
+    <h1><%= raw @post.title %></h1>
+    <p class="article-date text-center"><%= @post.created_at.strftime('%b %d, %Y') %></p>
+  </div>
+
+  <div class="article-body">
+    <p><%= raw @post.body %></p>
+  </div>
 </div>
