--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,4 +1,8 @@
 // Import your components CSS files here.
 @import "alert";
+@import "article";
 @import "avatar";
+@import "cards";
+@import "footer";
+@import "header";
 @import "navbar";
