--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>FANNY LIKES COFFEE</title>
     <!-- Stylesheet -->
-    <%#= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%#= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <!-- Google Fonts -->
@@ -14,7 +14,7 @@
 
     <!-- Favicon -->
     <%= favicon_link_tag asset_path('Favicon.png') %>
-    <%= favicon_link_tag asset_path('granos-de-cafe.png') %>
+    <%#= favicon_link_tag asset_path('granos-de-cafe.png') %>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
