--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,7 +3,7 @@
     <% @posts.each do |post|  %>
       <div class="card">
         <div class="featured-image">
-          <%= link_to image_tag(post.media), post_path(post) %>
+          <%= link_to image_tag(post.photo), post_path(post) %>
         </div>
         <div class="overlay">
           <span class="category-title">
