--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -15,16 +15,12 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.input :title, class: "form-control" %>
+  <%= f.association :category, collection: Category.order(:id), label: "Category" %>
   </div>
 
   <div class="form-group">
-    <%= f.input :category_id, class: "form-control" %>
+    <%= f.input :title, class: "form-control" %>
   </div>
-
-<!--   <div class="form-group">
-    <%= f.input :category, collection: [["Beauty & Style"],["Food & Drinks"],["Health & Fitness"],["Home Decor"],["Life & Inspo"]] %>
-  </div> -->
 
   <div class="form-group">
     <%= f.input :body %>
