--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
 
     <!-- Favicon -->
-    <%= favicon_link_tag asset_path('Favicon.png') %>
+    <%#= favicon_link_tag asset_path('Favicon.png') %>
     <%#= favicon_link_tag asset_path('granos-de-cafe.png') %>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
