--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,13 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
 
     <!-- Favicon -->
-    <%#= favicon_link_tag asset_path('Favicon.png') %>
+    <%= favicon_link_tag asset_path('Favicon.png') %>
     <%#= favicon_link_tag asset_path('granos-de-cafe.png') %>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
   </head>
 
   <body>
