--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -55,7 +55,7 @@
     <% @posts.each do |post|  %>
       <div class="card">
         <div class="featured-image">
-          <%= link_to cl_image_tag(post.photo.key), post_path(post) %>
+          <%#= link_to cl_image_tag(post.photo.key), post_path(post) %>
         </div>
         <div class="overlay">
           <span class="category-title">
